Matrix.cppresult.txt
cur.cpp: In member function 'virtual void MatrixTest_Reverse_Test::TestBody()':
cur.cpp:46:8: error: 'class Matrix' has no member named 'print'
     m->print(cout);
        ^
cur.cpp:48:7: error: 'class Matrix' has no member named 'print'
     c.print(cout);
       ^
cur.cpp: In member function 'virtual void MatrixTest_Read_Test::TestBody()':
cur.cpp:114:7: error: 'class Matrix' has no member named 'read'
     m.read(q);
       ^
./check.sh: line 24: ./a.out: No such file or directory
